[package]
name = "mastodon-instance-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodeinfo = "0.0.2"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
opt-level = 2